# conform_compiler

./: .gitignore  CMakeLists.txt  LICENSE  alignas.c  alignas.cpp  conform_compiler.h  deprecated.c  fallthrough.c  fallthrough.cpp  inline.cpp  maybe_unused.c  maybe_unused.cpp  nodiscard_result.c  nodiscard_result.cpp  noreturn.c  pack_section.c  pack_section.cpp  static_assert.c  static_assert.cpp  thread.cpp  uniform_compiler.h
